# Eospp

./: .clang-format  .editorconfig  .gitignore  LICENSE  README.md  build_img.sh  qemu_boot.sh
.github/workflows/: cmake.yml
bootloader/: Makefile  bochsrc  boot.asm  build_img.sh  fat12.inc  io.asm  loader.asm
estl/: algorithm.hpp  allocator.hpp  any.hpp  array.hpp  atomic.hpp  bitset.hpp  defer.hpp  deque.hpp  functional.hpp  iterator.hpp  list.hpp  memory.hpp  pair.hpp  queue.hpp  rb_tree.hpp  set.hpp  stack.hpp  string_view.hpp  tuple.hpp  type.hpp  type_traits.hpp  utility.hpp  vector.hpp
estl/test/: CMakeLists.txt  algorithm_test.cpp  any_test.cpp  array_test.cpp  atomic_test.cpp  bitset_test.cpp  class.hpp  defer_test.cpp  deque_test.cpp  functional_test.cpp  list_test.cpp  memory_test.cpp  pair_test.cpp  queue_test.cpp  rb_tree_test.cpp  set_test.cpp  stack_test.cpp  string_view_test.cpp  tuple_test.cpp  type_traits_test.cpp  utility_test.cpp  vector_test.cpp
kernel/: .gitignore  Eospp.lds  Makefile  head.S  main.cpp
kernel/include/core/: arch.hpp  e820.hpp  global_obj.hpp  interrupt.hpp  memory_literals.hpp
kernel/include/io/: io.hpp  vesa.hpp
kernel/include/util/: string.hpp
kernel/src/core/: arch.s  e820.cpp  interrupt.cpp  irqs.s  isrs.s  physical_allocator.cpp  store_ctx.s  syscall.s
kernel/src/io/: veas.cpp
kernel/src/util/: string.cpp
kernel/test/: CMakeLists.txt  literals_test.cpp  string_test.cpp
stl/: type.hpp  type_traist.hpp
tools/: bochsrc.txt
